--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "pydantic>=2.0.0",
     "typing-extensions>=4.9.0",
     "psycopg2-binary>=2.9.0",
+    "sqlalchemy>=2.0.0",
+    "alembic>=1.13.0",
 ]
 
 [build-system]
@@ -23,7 +25,3 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["src"]
-
-[[tool.hatch.build.targets.wheel.force-include]]
-path = "src"
-destination = "src"
