feat: Enhance component search functionality and update configuration
- Added support for filtering components by project ID in the search_by_hook method.
- Introduced a new search_by_prop method for searching components by prop name.
- Updated the navigator tool to utilize the optimized database search methods.
- Removed pgAdmin service from docker-compose.yml for simplification.
- Added a new script (start_mcp_wsl.sh) for easier local development setup.
- Updated .mcp-config.json to include the Platform Funnel application.

--- a/.mcp-config.json
+++ b/.mcp-config.json
@@ -5,6 +5,12 @@
       "repository": "https://github.com/brandiniA/craftitapp",
       "branch": "main",
       "type": "application"
+    },
+    "platform-funnel": {
+      "name": "Platform Funnel",
+      "repository": "https://github.com/reservamos/platform-funnel",
+      "branch": "develop",
+      "type": "application"
     }
   }
 }
