chore: add analysis directory to gitignore
- Create analysis/ directory for temporary analysis docs
- Keep docs/ for official project documentation only
- Ignore diagnostic output files

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ logs/
 *.tmp
 tmp/
 temp/
+
+# Analysis and diagnostic files (temporary documentation)
+analysis/
+diagnostic_output.txt
+diagnostic_report.json
